# runPHP

./: .eslintrc.js  .gitignore  LICENSE  README.md  functions.js  index.html  main.js  package-lock.json  package.json  preload.js  prettier.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts  vitest.config.js
assets/: video.mkv
src/: App.vue  editor-configuration.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ActionButton.vue  Editor.vue  Result.vue
src/logic/: bash.ts
src/store/: editor.ts  result.ts
src/utils/: defaultConfigurations.ts  functions.ts
test/: example.ts
utils/: monacoDefaultConfiguration.js
